# projects

./: HISTORY.md  justfile  load.txt  pyproject.toml  requirements.txt
src/projects/: __init__.py  build.py  compare.py  config.py  constants.py  env_version.py  main.py  main_menu.py  module_caller.py  modules.py  project.py  project_server.py  project_utilities.py  projects_io.py  root.py
src/projects/forms/: frm_build.py  frm_compare.py  frm_config.py  frm_main.py  frm_project_edit.py  frm_project_versions.py  frm_search.py
tests/: test_projects.py  test_version.py
